# reforge

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  catalog-info.yaml  deployment-plan.md  implementation-plan.md  mkdocs.yml  reforge.toml.example  replacements.toml
.claude/: README.md  index.md  settings.local.json
.claude/knowledge/: agent-orchestration-strategy.md  initial-build-session.md  project-architecture.md  project-naming.md  renovate-compatibility.md  todo-completion.md
.cursor/rules/: session-startup.mdc
docs/: README.md  advanced.md  configuration.md  getting-started.md  gitlab-ci.md  gitlab-container-registry.md  index.md  local-mode.md  managers.md  merge-requests.md
qa/: integration-test.md  reforge-e2e.toml
qa/scripts/: run-reforge.sh  teardown.sh  validate.sh  verify-access.sh
src/: automerge.rs  changelog.rs  config.rs  dashboard.rs  error.rs  grouping.rs  lockfile.rs  main.rs  orchestrator.rs  rebase.rs  replacement.rs  scheduling.rs  updater.rs  util.rs  versioning.rs  vulnerability.rs
src/manager/: docker.rs  helm.rs  mod.rs  regex.rs
src/platform/: git.rs  gitlab.rs  mod.rs
src/registry/: docker.rs  helm.rs  mod.rs
tests/: end_to_end.rs
tests/fixtures/: Chart.yaml  Dockerfile.arg_based  Dockerfile.multistage  Dockerfile.simple  docker-compose.yaml  helm-index.yaml  values.yaml
todo/: 01-dead-code-cleanup.md  09-gitlab-ci.md  10-audit-expect-in-production.md  11-audit-duplicated-code.md  12-audit-stringly-typed-apis.md  13-audit-orchestrator-god-struct.md  14-audit-medium-low-findings.md  AUDIT-SUMMARY.md
(+23 files in other folders)
