[package]
name = "reforge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reforge"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
semver = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
